# libnm_example

./: README.md
example/: CMakeLists.txt  add_ethernet_connection.cpp  add_wifi_connection.cpp  device_type.cpp  get_ipv4.cpp  get_password.cpp  modify_connection.cpp  modify_password.cpp  show_active.cpp  update_ipv4.cpp  wifi.cpp
example/include/: get_connection.hpp
